# CORE

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
gui_toolbox/: .gitignore  .gitmodules  README.md  __init__.py  app.py  example_main.py  pyproject.toml  requirements.txt  setup.py  test_app.py  window.py
gui_toolbox/GUI_ex/: _base.py  _widget.py
gui_toolbox/gui_ex/: __init___.py  base.py  data_process.py  widget.py  window.py
gui_toolbox/gui_ex_old/: data_process.py  widget.py
gui_toolbox/gui_toolbox/: __init__.py  app.py  core.py  widget.py  window.py
gui_toolbox/renderer/: __init__.py  definitions.py  render.py  view_camera.py
gui_toolbox/test_resource/: custom_contens.py  page.py
python_toolbox/: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  requiremrnts.txt  setup.py  system.py
python_toolbox/ais_python_module/: _base.py  _cv2.py  _label.py  _numpy.py
python_toolbox/ais_utils/: _base.py  _cv2.py  _label.py  _numpy.py
python_toolbox/manual/: _label.md  example.py
python_toolbox/python_AIS_ex_utils/: _base.py  _cv2.py  _label.py  _numpy.py
python_toolbox/python_ex/: _Array.py  _Base.py  _Error.py  _Numpy.py  _Project.py  _Result.py  _System.py  _Vision.py  __init__.py  _base.py  _cv2.py  _json.py  _label.py  _numpy.py  _result.py  _vision.py  debuging.py  file.py  project.py  system.py  vision.py
python_toolbox/python_ex/data/database/: SQLite.py
python_toolbox/python_ex/data_file/: BDD-100k.json  CDnet.json  imagenet_1k.json
python_toolbox/python_toolbox/: __init__.py  file.py  project.py
torch_toolbox/: .gitignore  .gitmodules  README.md  __init__.py  loss_and_acc.py  requirements.txt  requiremrnts.txt  setup.py
torch_toolbox/AIStorch_ex/: _model_style.py  _torch_util.py
torch_toolbox/example/: end-to-end.ipynb  end-to-end.py  example.py
torch_toolbox/neural_network/: backbone.py  transformer.py
torch_toolbox/torch_AIS_ex_utils/: _model_structure.py  _torch_util.py  _train_style.py
torch_toolbox/torch_ex/: Config.py  Trainer.py  _Base.py  _Config.py  _Dataset.py  _Layer.py  _Learning.py  _Model_n_Optim.py  _Torch_base.py  _Utils.py  _base.py  _config.py  _data_process.py  _dataloader.py  _dataset.py  _label.py  _layer.py  _model_structure.py  _optimizer.py  _process.py  _set_up.py  _structure.py  _torch_base.py  _trainer.py  config.py  learning.py
torch_toolbox/torch_ex_old/: _Learning.py  _Model_n_Optim.py  _Utils.py
torch_toolbox/torch_toolbox/: __init__.py  learning.py  (+1 more)
vition_toolbox/: README.md  requirements.txt  setup.py
(+97 files in other folders)
