[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_toolbox"
version = "0.1.0"
authors = [
  { name="Choi_keonghun & Jun_eins", email="dev.gyounghun6612@gmail.com" },
]
description = "A toolbox for vision-related functionalities."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "python_toolbox @ git+https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_python_toolbox.git",
]

[project.urls]
"Homepage" = "https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_vision_toolbox"
