# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AIS_gui_toolbox"
version = "0.1.0"
authors = [
  { name="AIS-GUI-Toolbox-Developer", email="developer@example.com" },
]
description = "A GUI toolbox with an OpenGL renderer for 3D visualization, including 3D Gaussian Splatting."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dependencies = [
    "PySide6",
    "viser",
    "open3d",
    "torch",
    "numpy", # numpy는 대부분의 그래픽스/ML 라이브러리에서 필수적이므로 명시적으로 추가합니다.
    "PyOpenGL",
    "PyOpenGL_accelerate",
    "plyfile",
    "python_toolbox @ git+https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_python_toolbox.git",
    "vision_toolbox @ git+https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_vision_toolbox.git",
]
